--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Quiz educacional com perguntas geradas por IA",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "echo \"Build concluído\" && exit 0"
   },
   "dependencies": {
     "axios": "^1.6.2",
