--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "axios": "^1.6.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
     "openai": "^4.97.0"
   }
 }
