--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "echo \"Build concluído\" && exit 0"
   },
   "dependencies": {
+    "@xenova/transformers": "^2.17.2",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
