--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "build": "echo \"Build concluído\" && exit 0"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "openai": "^4.28.0",
+    "axios": "^1.9.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.1"
+    "dotenv": "^16.5.0",
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
+    "openai": "^4.28.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
