--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nova-pasta",
   "version": "1.0.0",
   "description": "",
-  "main": "teste.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,8 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
     "node-fetch": "^3.3.2"
   }
 }
